@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2018-2023 Contributors to the XPages Jakarta EE Support Project
+ * Copyright (c) 2018-2025 Contributors to the XPages Jakarta EE Support Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,38 +17,42 @@ package org.openntf.xsp.jakarta.servlet.webapp;
 
 import java.io.IOException;
 import java.text.MessageFormat;
-
-import org.openntf.xsp.jakartaee.servlet.ServletUtil;
+import java.util.Arrays;
 
 import com.ibm.commons.util.StringUtil;
 
+import org.openntf.xsp.jakarta.cdi.util.DiscoveryUtil;
+import org.openntf.xsp.jakartaee.servlet.ServletUtil;
+
+import jakarta.enterprise.inject.spi.CDI;
 import jakarta.servlet.Servlet;
 import jakarta.servlet.ServletException;
+import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 /**
  * General-purpose Servlet implementation meant to wrap a {@code jakarta.*}
  * Servlet for a {@link javax.*} environment.
- * 
+ *
  * <p>Users can specify the Jakarta Servlet class name either by specifying the
  * {@value #INIT_PARAM_SERVLETCLASS} init parameter or
- * by subclassing this and overriding {@link #getJakartaServletClassName()}.
- *  
+ * by subclassing this and overriding {@link #getJakartaServletClassName()}.</p>
+ *
  * @author Jesse Gallagher
  * @since 2.8.0
  */
 public class JakartaServletFacade extends javax.servlet.http.HttpServlet {
 	private static final long serialVersionUID = 1L;
-	
+
 	public static final String INIT_PARAM_SERVLETCLASS = "org.openntf.xsp.jakarta.servlet.class"; //$NON-NLS-1$
-	
+
 	private Servlet delegate;
 
 	@Override
-	public void init(javax.servlet.ServletConfig config) throws javax.servlet.ServletException {
+	public void init(final javax.servlet.ServletConfig config) throws javax.servlet.ServletException {
 		super.init(config);
-		
+
 		String className = getJakartaServletClassName();
 		if(StringUtil.isEmpty(className)) {
 			throw new IllegalArgumentException(MessageFormat.format("Servlet class name must be specified via the {0} init parameter or getJakartaServletClassName()", INIT_PARAM_SERVLETCLASS));
@@ -56,20 +60,24 @@ public class JakartaServletFacade extends javax.servlet.http.HttpServlet {
 		try {
 			@SuppressWarnings("unchecked")
 			Class<? extends Servlet> delegateClass = (Class<? extends Servlet>) Class.forName(className, true, Thread.currentThread().getContextClassLoader());
-			this.delegate = delegateClass.newInstance();
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-			throw new javax.servlet.ServletException(MessageFormat.format("Encountered exception loading Servlet of class {0}", className), e);
+			if(Arrays.stream(delegateClass.getAnnotations()).anyMatch(DiscoveryUtil::isBeanDefining) || delegateClass.isAnnotationPresent(WebServlet.class)) {
+				this.delegate = CDI.current().select(delegateClass).get();
+			} else {
+				this.delegate = delegateClass.getConstructor().newInstance();
+			}
+		} catch (Exception e) {
+			throw new javax.servlet.ServletException(MessageFormat.format("Encountered exception loading Servlet of class {0} with ClassLoader {1}", className, Thread.currentThread().getContextClassLoader()), e);
 		}
-		
+
 		try {
 			this.delegate.init(ServletUtil.oldToNew(config));
 		} catch(ServletException e) {
 			throw ServletUtil.newToOld(e);
 		}
 	}
-	
+
 	@Override
-	protected void service(javax.servlet.http.HttpServletRequest oldReq, javax.servlet.http.HttpServletResponse oldResp)
+	protected void service(final javax.servlet.http.HttpServletRequest oldReq, final javax.servlet.http.HttpServletResponse oldResp)
 			throws javax.servlet.ServletException, IOException {
 		try {
 			HttpServletRequest req = ServletUtil.oldToNew(getServletContext(), oldReq);
@@ -79,18 +87,18 @@ public class JakartaServletFacade extends javax.servlet.http.HttpServlet {
 			throw ServletUtil.newToOld(e);
 		}
 	}
-	
+
 	@Override
 	public void destroy() {
 		delegate.destroy();
-		
+
 		super.destroy();
 	}
-	
+
 	public String getJakartaServletClassName() {
 		return getServletConfig().getInitParameter(INIT_PARAM_SERVLETCLASS);
 	}
-	
+
 	public Servlet getDelegate() {
 		return delegate;
 	}
